# SimulEDA-P2-Vanessa

./: CMakeLists.txt  main.c  teste
estruturas/: TLista.c  TLista.h  hash.c  hash.h
gabarito/: Q3.c  Q6.c  Q7.c  Q9.c  resposta.h
respostas/: Q3.c  Q4.c  Q5.c  Q6.c  Q7.c  Q9.c  questoes.h
